<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCartOrders"
    android:background="@drawable/primary_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profileTabBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whiteBack"
                android:textColor="@color/navaraPrimary"
                android:text="@string/profile"/>

            <Button
                android:id="@+id/cartTabBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whiteBack"
                android:text="@string/my_cart"/>

            <Button
                android:id="@+id/orderTabBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whiteBack"
                android:text="@string/my_orders"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:background="@color/navaraPrimary"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/profileCartOrderVP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <FrameLayout
            android:id="@+id/profileCartOrderFL"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadProfileFL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false" />

</RelativeLayout>