<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/login_register_back"
                android:scaleType="centerCrop"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/whiteHide"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:src="@drawable/navara_circle_logo"
                    android:layout_margin="@dimen/main_toolbar_title"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/navaraPrimary"
                    android:textSize="@dimen/main_buttons"
                    android:text="@string/app_name"
                    tools:ignore="SpUsage" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginTabBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whiteBack"
                android:textColor="@color/navaraPrimary"
                android:text="@string/login"/>

            <Button
                android:id="@+id/registerTabBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/whiteBack"
                android:text="@string/register"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/navaraPrimary"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/loginRegisterVP"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <include layout="@layout/fragment_loading"
        android:visibility="gone"/>

</RelativeLayout>